--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Ryan Stivers's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,46 +10,47 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li class="name">Ryan Stivers</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experiences.html">Experiences</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/stivers.jpg" alt="Picture of Ryan Stivers" class="profile-image">
+      <h1 class="tag name"><strong>Hello, I’m Mr. Stivers.</strong></h1>
+      <p class="tag location"><strong>My Home is New Orleans, LA.</strong></p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
+        <p>Ryan Stivers is an educational consultant who also serves as the Founding Developer Coach at the Rooted School in New Orleans, Louisiana.  As an educational researcher and practitioner, he has leveraged his expertise and experience to support numerous school systems and nonprofits through significant change management efforts.  Stivers utilizes quantitative and qualitative data and analysis to develop technology driven academic and non-academic systems – in particular those related to blended, personalized, and distance learning models.  Additionally, he holds deep expertise in developing equity-based, culturally competent, and social justice themed curricula for students across the K-12 spectrum, non-traditional adult learners, and those in alternative educational settings.</p>
+        <p>Stivers is a passionate social justice and educational equity advocate within the community.  He is a New Leaders Council – Louisiana Chapter Fellow and an active member of Kappa Delta Pi International Honor Society in Education where he was previously elected to the international board.  Stivers is also an inductee and member of Phi Beta Kappa Honor Society and Omicron Delta Kappa National Leadership Honor Society.  He serves on numerous nonprofit boards and volunteers his time to activities that promote youth and community development.  Stivers holds a B.A. Summa Cum Laude in Secondary Education and History from Lake Forest College, where he was a Christopher Mojekwu Awardee for Intercultural Relations and President’s Awardee, as well as a M.A. in Educational Leadership from Teachers College at Columbia University.</p>
+</div>
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <h2>skills</h2>
+        <p>Mr. Stivers's Skills</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>K-12 Education</li>
+          <li>Adult Education</li>
+          <li>Education Technology</li>
+          <li>Curriculum Development</li>
+          <li>Technical and Professional Development</li>
+          <li>Progam Development and Evaulation</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+        <p>Mr. Stivers hopes to continue serving education institutions in low-income areas to address the economic and social inequities that exist in our society.</p>
+      </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.twitter.com" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/ryan-stivers-497bb574/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/MrStivers" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2017, Ryan Stivers</p>
     </footer>
   </body>
   </html>
