--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/stivers.jpg" alt="Picture of Ryan Stivers" class="profile-image">
+      <img src="images/Stivers.jpg" alt="Picture of Ryan Stivers" class="profile-image">
       <h1 class="tag name"><strong>Hello, I’m Mr. Stivers.</strong></h1>
       <p class="tag location"><strong>My Home is New Orleans, LA.</strong></p>
     </header>
